crates/parser/tests/snapshots/duplicate_keys_three_sources.snap
---
source: crates/parser/tests/snapshots.rs
---
# duplicate-keys-three-sources

## Input

```
a. {
  b 1
}
a.b 2
a. {
  b 3
}

```

## CST

```
SOURCE_FILE@0..32
  PREFIX_BLOCK@0..13
    WORD_KEY@0..2
      WORD@0..2 "a."
    SPACE@2..3 " "
    OPEN_BRACE@3..4 "{"
    NEWLINE@4..5 "\n"
    SPACE@5..7 "  "
    ENTRY@7..11
      WORD_KEY@7..8
        WORD@7..8 "b"
      SPACE@8..9 " "
      INTEGER@9..10
        NUMERAL@9..10 "1"
      NEWLINE@10..11 "\n"
    CLOSE_BRACE@11..12 "}"
    NEWLINE@12..13 "\n"
  ENTRY@13..19
    WORD_KEY@13..16
      WORD@13..16 "a.b"
    SPACE@16..17 " "
    INTEGER@17..18
      NUMERAL@17..18 "2"
    NEWLINE@18..19 "\n"
  PREFIX_BLOCK@19..32
    WORD_KEY@19..21
      WORD@19..21 "a."
    SPACE@21..22 " "
    OPEN_BRACE@22..23 "{"
    NEWLINE@23..24 "\n"
    SPACE@24..26 "  "
    ENTRY@26..30
      WORD_KEY@26..27
        WORD@26..27 "b"
      SPACE@27..28 " "
      INTEGER@28..29
        NUMERAL@28..29 "3"
      NEWLINE@29..30 "\n"
    CLOSE_BRACE@30..31 "}"
    NEWLINE@31..32 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..2 "a.",
            },
            open_brace: OPEN_BRACE@3..4 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@7..8 "b",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@9..10 "1",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@11..12 "}",
        },
        Entry {
            key: WordKey {
                word: WORD@13..16 "a.b",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@17..18 "2",
            },
        },
        PrefixBlock {
            key: WordKey {
                word: WORD@19..21 "a.",
            },
            open_brace: OPEN_BRACE@22..23 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@26..27 "b",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@28..29 "3",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@30..31 "}",
        },
    ],
}
```

vim:ft=markdown
