crates/parser/tests/snapshots/empty.snap
---
source: crates/parser/tests/snapshots.rs
---
# empty

## Input

```

```

## CST

```
SOURCE_FILE@0..0
```

## AST

```
SourceFile {
    items: [],
}
```

vim:ft=markdown
